syntax = "proto3";

package main;

option go_package = "./api";

service Math {
  rpc Sum(SumReq) returns (SumResp) {}
  rpc Sub(SubReq) returns (SubResp) {}
}

message SumReq {
  int32 x = 1;
  int32 y = 2;
}

message SumResp{
  int32 result = 1;
}

message SubReq {
  int32 x = 1;
  int32 y = 2;
}

message SubResp {
  int32 result = 1;
}